--- a/index.html
+++ b/index.html
@@ -3,38 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page avec Navbar et Cards Dynamiques</title>
+    <title>Trombinoscope</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="navbar-content">
-            <input type="text" id="searchBar" placeholder="Recherche..." class="search-bar">
-            
-            <select id="yearSelect" class="year-select">
-                <option value="">Sélectionner une année</option>
-                <option value="2023">2023</option>
-                <option value="2022">2022</option>
-                <option value="2021">2021</option>
-                <option value="2020">2020</option>
-            </select>
+    <header>
+        <h1>Trombinoscope L'&Eacute;cole Du Num&eacute;rique</h1>
+    </header>
 
-            <div class="checkbox-container">
-                <label>
-                    <input type="checkbox" id="checkbox1"> dev frontend
-                </label>
-                <label>
-                    <input type="checkbox" id="checkbox2"> dev backend
-                </label>
-            </div>
+    <nav class="navbar">
+        <select id="yearSelect" class="year-select">
+            <option value="">Promotion</option>
+            <option value="2023">2023</option>
+            <option value="2022">2022</option>
+            <option value="2021">2021</option>
+            <option value="2020">2020</option>
+        </select>
+        <input type="text" id="searchBar" placeholder="Recherche..." class="search-bar">
+        <div class="checkbox-container">
+            <label>
+                <input type="checkbox" id="checkbox1"> Dev Front
+            </label>
+            <label>
+                <input type="checkbox" id="checkbox2"> Back End
+            </label>
         </div>
     </nav>
 
-    <button id="addCardBtn" class="add-card-btn">Ajouter une carte</button>
-
-    <section id="cardsContainer" class="cards-container">
+    <section id="cards-container" class="cards-container">
     </section>
 
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
