--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Trombinoscope L'&Eacute;cole Du Num&eacute;rique</h1>
+        <h1>Trombinoscope des Developpeurs Web, Web Mobile</h1>
     </header>
 
     <nav class="navbar">
