--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
 
     <nav class="navbar">
         <select id="yearSelect" class="year-select">
-            <option value="">Promotion</option>
+            <option value="promotion">Promotion</option>
             <option value="2025">2025</option>
             <option value="2024">2024</option>
             <option value="2023">2023</option>
         </select>
         <input type="text" id="searchBar" placeholder="Recherche..." class="search-bar">
-        <div class="checkbox-container">
         </div>
     </nav>
 
