Ajout des filtres contenus competences, ajout de toutes competences

--- a/index.html
+++ b/index.html
@@ -12,14 +12,43 @@
     </header>
 
     <nav class="navbar">
+        
         <select id="yearSelect" class="year-select">
             <option value="promotion">Promotion</option>
+            <option value="promotion">Tous</option>
             <option value="2025">2025</option>
             <option value="2024">2024</option>
             <option value="2023">2023</option>
         </select>
-        <input type="text" id="searchBar" placeholder="Recherche..." class="search-bar">
-        </div>
+
+        <label for="chexkbox" class="checkbox-label"> Html5
+            <input type="checkbox" id="checkboxhtml" value="9" class="checkbox">
+        </label>
+        <label for="chexkbox" class="checkbox-label"> Css3
+            <input type="checkbox" id="checkboxcss" value="10" class="checkbox">
+        </label>
+        <label for="chexkbox" class="checkbox-label"> Javascript
+            <input type="checkbox" id="checkboxjs" value="12" class="checkbox">
+        </label>
+        <label for="chexkbox" class="checkbox-label"> Figma
+            <input type="checkbox" id="checkboxfigma" value="15" class="checkbox">
+        </label>
+        <label for="chexkbox" class="checkbox-label"> Tailwind
+            <input type="checkbox" id="checkboxreact" value="18" class="checkbox">
+        </label>
+        <label for="chexkbox" class="checkbox-label"> Php
+            <input type="checkbox" id="checkboxreact" value="11" class="checkbox">
+        </label>
+        <label for="chexkbox" class="checkbox-label"> Bootstrap
+            <input type="checkbox" id="checkboxreact" value="17" class="checkbox">
+        </label>
+        <label for="chexkbox" class="checkbox-label"> Symfony
+            <input type="checkbox" id="checkboxreact" value="13" class="checkbox">
+        </label>
+        <label for="chexkbox" class="checkbox-label"> Vue.js
+            <input type="checkbox" id="checkboxreact" value="14" class="checkbox">
+        </label>
+            
     </nav>
 
     <section id="cards-container" class="cards-container">
